--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
+# macOS
 .DS_Store
-.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Node modules
+node_modules/
+
+# Logs
+logs
+*.log
