--- a/Part3/phonebook/package.json
+++ b/Part3/phonebook/package.json
@@ -9,5 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Barbara Peters",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "morgan": "^1.10.1"
+  }
 }
