--- a/Part3/phonebook/package.json
+++ b/Part3/phonebook/package.json
@@ -11,6 +11,7 @@
   "author": "Barbara Peters",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "morgan": "^1.10.1"
   }
